--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-native-confetti-cannon": "^1.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
